--- a/app/src/main/res/layout/activity_cat3.xml
+++ b/app/src/main/res/layout/activity_cat3.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Cat3"
+    android:focusableInTouchMode="true"
     tools:context="ady.ergo.tool.ergotool.Cat3Activity">
 
     <ScrollView
@@ -77,12 +78,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:background="@drawable/border">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginRight="8dp"
                         android:orientation="vertical"
                         android:gravity="center"
                         android:background="@color/Cat1">
@@ -108,6 +111,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginRight="8dp"
                         android:orientation="vertical"
                         android:gravity="center"
                         android:background="@color/Cat2">
@@ -133,6 +137,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_marginRight="8dp"
                         android:orientation="vertical"
                         android:gravity="center"
                         android:background="@color/Cat3">
